Added image cards for user stories

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 }
 
   @media screen and (max-width: 1024px) {
-    .jumbotron {
+.jumbotron {
     left: 50%;
     margin-left: auto;
    }
@@ -32,3 +32,7 @@
   font-style: italic;
   color: aliceblue;
 }
+
+
+/* Image Cards */
+.
