--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,4 +35,19 @@
 
 
 /* Image Cards */
-.
+.card-img-top {
+
+}
+
+.card-text {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 16px;
+    font-style: italic;
+    text-align: center;
+}
+
+.blockquote-footer {
+    font-size: 14px;
+    text-align: center;
+    font-family: 'Playfair Display', sans-serif;
+}
