--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,11 +45,7 @@
 }
 
 
-/* Image Cards */
-.card-img-top {
-
-}
-
+/* Card Deck */
 .card-text {
     font-family: 'Playfair Display', sans-serif;
     font-size: 16px;
