--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,13 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+/* Container */
+.container .quotes-header {
+    text-align: center;
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 2rem;
+    font-style: italic;
+}
 
 /* Media Query copied from CSS Tricks */
   @media screen and (max-width: 1024px) {
