--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
    font-family: 'Playfair Display', sans-serif;
 }
 
+/* callout */
+
+
 /* Jumbotron */
 .jumbotron {
   height: 100vh;
@@ -16,7 +19,14 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-/* Container */
+
+.jumbotron button {
+    font-family: 'Playfair Display', sans-serif;
+    font-weight: 500;
+    font-style: italic;
+}
+
+/* Containers */
 .container .quotes-header {
     text-align: center;
     font-family: 'Playfair Display', sans-serif;
