Updated about section href in navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@
 }
 
 /********** About Section */
-/* this syntax was copied from code institute's whiskey drop project */
+/* this styles for this section were inspired by Code Institute's Whiskey Drop project */
 .about {
     text-align: center;
     margin-bottom: 40px;
