--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,404&display=swap');
 
 /* Global Styles */
+body, p {
+    font-family: 'Playfair Display', sans-serif;
+}
 
 .page-header {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', sans-serif;
     font-size: 2rem;
     font-style: italic;
     font-weight: 500;
