Styled all section-header class elements in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body, p {
     font-family: 'Playfair Display', sans-serif;
 }
 
-.page-header {
+.section-header {
     font-family: 'Playfair Display', sans-serif;
     font-size: 2rem;
     font-style: italic;
