--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,18 +18,11 @@ body, p {
 }
 
 /* Containers */
-.container .quotes-header {
-    text-align: center;
-    font-family: 'Playfair Display', sans-serif;
-    font-size: 2rem;
-    font-style: italic;
-}
 
 .container-wrapper {}
 
 .container-wrapper--grey {
-    background-color: #ffffff;
-    color:#000000;
+    background-color: rgba(57, 57, 57, 0.8);
 }
 
 .content-container {
@@ -62,7 +55,7 @@ body, p {
     margin-left: auto;
    }
 }
-/* Overlay style syntax copied from Whiskey Drop project */
+/* Overlay style syntax inspired by Code Insitute's Whiskey Drop project */
 .jumbotron-overlay {
     position: absolute;
     top: 0;
@@ -71,6 +64,7 @@ body, p {
     width: 100%;
     background-color: rgba(36, 37, 42, 0.5);
 }
+
 .jumbotron h1 {
   font-family: 'Playfair Display', serif;
   color: #f8f9fa;
@@ -136,6 +130,8 @@ body, p {
     font-size: 1.5rem;
     font-style: italic;
     font-weight: 500;
+    text-align: center;
+    color: #000000;
 }
 
 .quotes-content {
@@ -143,6 +139,7 @@ body, p {
     font-size: 1rem;
     font-style: italic;
     text-align: center;
+    color: #000000;
 }
 
 .blockquote-footer {
