--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,404&display=swap');
 
-/* Global Styles */
+
 body, p {
     font-family: 'Playfair Display', sans-serif;
 }
@@ -18,7 +18,6 @@ body, p {
 }
 
 /***** Containers */
-
 .container-wrapper {}
 
 .container-wrapper--grey {
@@ -48,14 +47,14 @@ body, p {
     font-style: italic;
 }
 
-/* Media Query copies from CSS Tricks */
+/* Media Query */
   @media screen and (max-width: 1024px) {
 .jumbotron {
     left: 50%;
     margin-left: auto;
    }
 }
-/* .jumbotron Overlay - inspired by Code Institute */
+/* .jumbotron Overlay */
 .jumbotron-overlay {
     position: absolute;
     top: 0;
