--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,15 @@ body, p {
     font-size: 2rem;
     font-style: italic;
     font-weight: 500;
+    margin: 0 auto
 }
 
-/***** Navbar */
+/*-------------------------------------------- Navbar */
 .navbar {
    font-family: 'Playfair Display', sans-serif;
 }
 
-/***** Containers */
+/*-------------------------------------------- Containers */
 .container-wrapper {}
 
 .container-wrapper--grey {
@@ -29,11 +30,11 @@ body, p {
     padding-bottom: 75px;
 }
 
-/***** Jumbotron */
+/*-------------------------------------------- Jumbotron */
 .jumbotron {
     height: 100vh;
     min-height: 500px;
-    background: url('/assets/images/yogamat.jpg');
+    background: url('/assets/images/infinityphoto.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -47,24 +48,17 @@ body, p {
     font-family: 'Playfair Display', sans-serif;
     font-weight: 500;
     font-style: italic;
+    margin: 0 auto;
 }
 
-/* Media Query */
-  @media screen and (max-width: 1024px) {
-.jumbotron {
-    left: 50%;
-    margin-left: auto;
-   }
-}
-
-/* .jumbotron overlay */
+/*-------------------------------------------- Jumbotron Overlay */
 .jumbotron-overlay {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(21, 68, 97, 0.205);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .jumbotron h1 {
@@ -78,7 +72,7 @@ body, p {
   color: #e8edf2;
 }
 
-/* About */
+/*-------------------------------------------- About */
 .about {
     text-align: center;
     margin-bottom: 40px;
@@ -127,7 +121,48 @@ body, p {
      float: none;
 }
 
-/* Quotes */
+/*-------------------------------------------- Icons */
+i.fas.fa-yin-yang.d-none.d-sm-block {
+    color: #69a8a9;
+    font-size: 50px;
+}
+
+i.fas.fa-yin-yang.d-none.d-sm-block:hover {
+    color: #081826;
+    font-size: 50px;
+}
+
+i.fas.fa-peace.d-none.d-sm-block {
+    color: #69a8a9;
+    font-size: 50px;
+}
+
+i.fas.fa-peace.d-none.d-sm-block:hover {
+    color: #081826;
+    font-size: 50px;
+}
+
+i.fas.fa-heart.d-none.d-sm-block {
+    color: #69a8a9;
+    font-size: 50px;
+}
+
+i.fas.fa-heart.d-none.d-sm-block:hover {
+    color: #081826;
+    font-size: 50px;
+}
+
+i.fas.fa-infinity.d-none.d-sm-block {
+    color: #69a8a9;
+    font-size: 50px;
+}
+
+i.fas.fa-infinity.d-none.d-sm-block:hover {
+    color: #081826;
+}
+
+
+/*-------------------------------------------- Quotes */
 .quotes-header {
     font-family: 'Playfair Display', serif;
     font-size: 1.5rem;
@@ -149,4 +184,29 @@ body, p {
     font-size: 14px;
     text-align: center;
     font-family: 'Playfair Display', sans-serif;
+}
+
+
+/*-------------------------------------------- Schedule */
+
+
+/*-------------------------------------------- Media Queries */
+  @media screen and (max-width: 1024px) {
+.jumbotron {
+    left: 50%;
+    margin-left: auto;
+   }
+}
+
+/* stack overflow (https://stackoverflow.com/questions/56964388/how-to-fix-font-awesome-icons-not-showing-on-mobile-chrome) */
+@media screen and (max-width:600px){
+i {
+    color: #69a8a9;
+    }
+}
+
+@media screen and (max-width:600px){
+i:hover {
+    color: #081826;
+    }
 }
