--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,404&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Poppins:wght@100;200;300&display=swap');
 
+/*-----------------------------------------Headers */
+h1, h2, h3 {
+    font-family: 'Playfair Display', serif;
+}
 
-body, p {
-    font-family: 'Playfair Display', sans-serif;
+p {
+    font-family: 'Poppins', sans-serif;
 }
 
 .section-header {
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Playfair Display', serif;
     font-size: 2rem;
     font-style: italic;
     font-weight: 500;
-    margin: 0 auto
+    margin: 0 auto;
+    text-align: center;
 }
 
 /*-------------------------------------------- Navbar */
 .navbar {
-   font-family: 'Playfair Display', sans-serif;
+   font-family: 'Playfair Display', serif;
 }
 
 /*-------------------------------------------- Containers */
@@ -45,7 +50,7 @@ body, p {
 }
 
 .jumbotron button {
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Playfair Display', serif;
     font-weight: 500;
     font-style: italic;
     margin: 0 auto;
@@ -67,7 +72,7 @@ body, p {
 }
 
 .jumbotron p {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: 'Playfair Display', serif;
   font-style: italic;
   color: #e8edf2;
 }
@@ -113,10 +118,9 @@ body, p {
  }
 
 .about-content {
-     font-family: 'Playfair Display', serif;
-     font-size: 1rem;
+     font-family: 'Poppins', sans-serif;
+     font-size: 15px;
      font-weight: 400;
-     font-style: italic;
      margin: 0 auto;
      float: none;
 }
