--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,23 @@ h3.about-header {
     margin: 0 auto;
 }
 
+.jumbotron h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 7rem;
+  color: #F2F2F2;
+  font-weight: 200;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  text-shadow: 2px #081826;
+}
+
+.jumbotron p {
+  font-family: 'Playfair Display', serif;
+  font-style: italic;
+  color: #e8edf2;
+}
+
+
 /*-------------------------------------------- Jumbotron Overlay */
 .jumbotron-overlay {
     position: absolute;
@@ -72,18 +89,7 @@ h3.about-header {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.jumbotron h1 {
-  font-family: 'Playfair Display', serif;
-  color: #f8f9fa;
-}
-
-.jumbotron p {
-  font-family: 'Playfair Display', serif;
-  font-style: italic;
-  color: #e8edf2;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 /*-------------------------------------------- About */
