--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,14 @@ i.fas.fa-praying-hands.d-none.d-sm-block:hover {
 }
 
 /*-------------------------------------------- Quotes */
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev{
+    display: block;
+}
+
+
 .quotes-header {
     font-family: 'Playfair Display', serif;
     font-size: 1.5rem;
