Updated jumbotron with originally planned background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ a.navbar-brand {
 .jumbotron {
     height: 100vh;
     min-height: 500px;
-    background: url('../images/warrior3.jpg');
+    background: url('../images/infinityphoto.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
