Updated footer background color to match navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@ div.col-12.col-6 {
 /*-------------------------------------------- Contact */
 
 /*-------------------------------------------- Footer */
-footer {
+.footer {
     background-color: #f8f9fa;
     font-size: 14px;
 }
