--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
 
 /*-----------------------------------------Global Styles */
-* {
-    box-sizing: border-box;
-}
 
 /*-----------------------------------------Headers */
 
@@ -75,13 +72,14 @@ a.navbar-brand {
 }
 
 .container-fluid {
-    margin: 0px auto;
+    padding: 20px 60px;
+    margin: 0 auto;
 }
 
 .container-fluid.blue-wrapper {
     padding: 40px 60px;
     background-color: rgba(135, 156, 166, 0.3);
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 .container.text-center.bg-blue {
@@ -151,12 +149,9 @@ a.btn.btn-info.btn-lg:hover {
 }
 
 /*-------------------------------------------- About */
-.col-sm-4 {
-}
-
 .about {
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
 }
 
 .about i {
@@ -186,10 +181,12 @@ a.btn.btn-info.btn-lg:hover {
      font-family: 'Montserrat', sans-serif;
      font-size: 14px;
      font-weight: 400;
+     margin: 0 auto;
+     float: none;
 }
 
 p.display-4.about-content {
-    font-size: 14px;
+    font-size: 15px;
 }
 
 /*-------------------------------------------- Icons */
