--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h1 {
 
 h2 {
     font-family: 'Playfair Display', serif;
-    font-size: 2rem;
+    font-size: 6vw;
     font-style: italic;
     font-weight: 500;
     text-align: center;
@@ -32,7 +32,7 @@ h3 {
     color: #011826;
     padding-bottom: 30px;
     margin: 0 auto;
-    font-size: 1.5rem;
+    font-size: 4.5vw;
 }
 
 footer h6 {
@@ -45,7 +45,6 @@ p {
 
 h2.section-header {
     font-family: 'Playfair Display', serif;
-    font-size: 2rem;
     font-style: italic;
     font-weight: 500;
     text-align: center;
@@ -63,12 +62,12 @@ h2.section-header {
 
 i.fas.fa-infinity {
     color: #69a8a9;
-    font-size: 30px;
+    font-size: 3vw;
 }
 
 i.fas.fa-infinity:hover {
     color: #011826;
-    font-size: 30px;
+    font-size: 3vw;
 }
 
 a.navbar-brand {
@@ -137,7 +136,7 @@ a.btn.btn-info.btn-lg:hover {
 
 .jumbotron h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 7rem;
+  font-size: 14vw;
   color: #f2f2f2;
   font-weight: 200;
   text-transform: uppercase;
@@ -171,7 +170,7 @@ a.btn.btn-info.btn-lg:hover {
 
 .about i {
     margin-bottom: 20px;
-    font-size: 45px;
+    font-size: 5vw;
     line-height: 45px;
 }
 
@@ -333,7 +332,7 @@ h3.text-center.quotes {
 
 blockquote {
     margin: 0 auto;
-    font-size: 12px;
+    font-size: 1.3vw;
     text-align: center;
 }
 
@@ -343,7 +342,7 @@ div.col-12.col-6 {
     align-content: center;
     margin: 0px auto;
     text-align: left;
-    font-size: 12px;
+    font-size: 1.3vw;
 }
 
 .embed-responsive.embed-responsive-16by9 {
@@ -366,11 +365,11 @@ h2.text-center {
 /*-------------------------------------------- Footer */
 .footer {
     background-color: #f8f9fa;
-    font-size: 14px;
+    font-size: 1.6vw;
 }
 
 footer i.fas.fa-chevron-up {
-    font-size: 20px;
+    font-size: 2.3vw;
     margin-bottom: 10px;
     color: #69A8A9;
 }
@@ -405,7 +404,6 @@ i:hover {
  @media screen and (max-width: 600px) {
 h3.about-header {
     font-family: 'Playfair Display', serif;
-    font-size: 1.5rem;
     font-style: italic;
     font-weight: 500;
     margin: 0 auto;
